--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,7 +11,7 @@
           {% csrf_token %}
 
           <div class="mb-4">
-            <h2 class="text-center mt-2">Sign In</h2>
+            <h2 class="text-center mt-2">Login</h2>
           </div>
           {% if messages %}
             {% for message in messages %}
@@ -44,13 +44,13 @@
           </div>
           <hr>
           <div class="text-center">
-            <button type="submit" class="btn btn-outline-success">Sing In</button>
+            <button type="submit" class="btn btn-outline-success">Login</button>
           </div>
           <div class="text-center mb-3">
             <div>
               <p class="my-0">or</p>
               <a class="link-secondary text-decoration-none" href="{% url 'accounts:registration' %}">
-                Sign Up
+                Register
               </a>
             </div>
           </div>
