--- a/templates/accounts/password/reset_password.html
+++ b/templates/accounts/password/reset_password.html
@@ -33,7 +33,7 @@
             <div>
               <p class="my-0">or</p>
               <a class="link-secondary text-decoration-none" href="{% url 'accounts:login' %}">
-                Sign In
+                Login
               </a>
             </div>
           </div>
