--- a/templates/accounts/email/email_verification_done.html
+++ b/templates/accounts/email/email_verification_done.html
@@ -19,9 +19,7 @@
         {% else %}
           <div class="alert alert-success">
             <h3>
-              You're almost there! You will receive an email within a couple of minutes.
-              Just click on the link in that email to complete your verification if you don't see it,
-              you may need to check your spam folder.
+                Check your email soon for a verification link. If you don't see it, check your spam folder.
             </h3>
           </div>
         {% endif %}
