--- a/templates/recipe/recipe_bookmarks.html
+++ b/templates/recipe/recipe_bookmarks.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container bg-light min-vh-100">
     <div>
-      <h1 class="text-center pt-2">{{ user.username }} bookmarks</h1>
+      <h1 class="text-center pt-2">{{ user.username }} favorites</h1>
     </div>
     <hr>
     <div id="bookmarks-wrp" class="row">
@@ -28,8 +28,7 @@
             2 0 0 0-1.732 1z"></path>
           </svg>
           <h3 class="text-center">
-            Oops! No saved recipes found.
-            Start saving now by clicking on the bookmark icon.
+            No saved recipes. Start saving by clicking the bookmark icon.
           </h3>
         </div>
       {% endif %}
