--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li>
-              <p class="text-center m-0">Menubar</p>
+              <p class="text-center m-0">Settings</p>
             </li>
             <li>
               <hr class="dropdown-divider bg-dark">
