--- a/templates/recipe/recipe_description.html
+++ b/templates/recipe/recipe_description.html
@@ -64,8 +64,8 @@
                 <button class="btn btn-outline-success" type="submit" id="comment-submit" disabled>Comment</button>
               </div>
               <p>
-                <a href="{% url 'accounts:login' %}">Sign In</a> or
-                <a href="{% url 'accounts:registration' %}">Sign Up</a> to leave comments.
+                <a href="{% url 'accounts:login' %}">Login</a> or
+                <a href="{% url 'accounts:registration' %}">Register</a> to leave comments.
               </p>
             {% endif %}
           </form>
@@ -98,7 +98,7 @@
           {% else %}
             <div id="no-comments" class="container text-center mb-5">
               <img class="mb-4" src="{% static 'icon/comment.svg' %}" alt="comment" width="125" height="125">
-              <h4>Looks like no one has left a comment yet, be the first!</h4>
+              <h4>Looks like nobody has commented yet, be the first!</h4>
             </div>
           {% endif %}
         </div>
